--- a/src/main.css
+++ b/src/main.css
@@ -14,6 +14,81 @@
   font-weight: 400;
 }
 
+/* 
+https://piccalil.li/blog/a-modern-css-reset 
+Has some changes by Kevin Powell, taken from:
+https://github.com/kevin-powell/fem-manage-landing-page-part-1/blob/master/style.css#L44
+https://www.youtube.com/watch?v=h3bTwCqX4ns&ab_channel=KevinPowell
+*/
+
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+html,
+body {
+  height: 100%;
+  font-size: 62.5%;
+}
+
+/* Set core body defaults */
+body {
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture,
+svg {
+  max-width: 100%;
+  display: block;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+/* My styling */
+
 :root {
   /* Background colors */
   --clr-bg-900: #1a1a1a;
@@ -21,37 +96,70 @@
 
   /* Text colors */
   --clr-text-100: #e0e0e0;
-  --clr-text-200: #b0b0b0;
+  --clr-text-400: #b0b0b0;
 
   /* Accent colors */
   --clr-accent-green: #00b894;
   --clr-accent-yellow: #fdcb6e;
   --clr-accent-purple: #a29bfe;
-  --clr-accent-orange: #ff7675;
+  --clr-accent-pink: #ff7675;
 
   /* Fonts */
-  --ff-base: "Roboto", sans-serif;
+  --ff-primary: "Roboto", sans-serif;
   --fw-thin: 100;
   --fw-regular: 400;
+
+  --fs-300: 1.4rem;
+  --fs-400: 1.6rem;
+  --fs-600: 2.4rem;
 }
 
-html {
-  font-size: 62.5%;
-}
+/* Utility classes */
 
-* {
-  margin: 0;
-}
-
-body {
-  font-family: var(--ff-base);
-  font-weight: var(--fw-thin);
+.bg-primary {
   background-color: var(--clr-bg-700);
+}
+
+.bg-secondary {
+  background-color: var(--clr-bg-900);
+}
+
+.text-primary {
   color: var(--clr-text-100);
 }
 
-#content-container {
+.text-secondary {
+  color: var(--clr-text-400);
+}
+
+.fw-thin {
+  font-weight: var(--fw-thin);
+}
+
+.fw-regular {
+  font-weight: var(--fw-regular)
+}
+
+.fs-300 {
+  font-size: var(--fs-300);
+}
+
+.fs-400 {
+  font-size: var(--fs-400);
+}
+
+.fs-600 {
+  font-size: var(--fs-600);
+}
+
+.main-section {
   width: 700px;
-  margin-inline: auto;
-  border: 3px solid lime
+  height: 700px;
+  margin: 24px auto;
+  display: flex;
+}
+
+body {
+  font-size: var(--fs-400);
+  font-family: var(--ff-primary);
 }
