Highlight selected list, delete list & items
- Add .selected to p element in clicked list.
- Remove list also removes HTML items.

--- a/src/main.css
+++ b/src/main.css
@@ -173,3 +173,7 @@ li * {
 input[type="checkbox"]:checked + p {
   color: var(--clr-text-400)
 }
+
+.selected {
+  border: 1px solid var(--clr-accent-purple)
+}
