.highlightSelected in UIManager
- Highlights persist through reload.

--- a/src/main.css
+++ b/src/main.css
@@ -177,3 +177,7 @@ input[type="checkbox"]:checked + p {
 .selected {
   border: 1px solid var(--clr-accent-purple)
 }
+
+#lists > li > p {
+  cursor: pointer;
+}
